Updated courselist for sp 26 semester

--- a/src/pages/coursework.html
+++ b/src/pages/coursework.html
@@ -135,7 +135,7 @@
            <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="courselist-wrapper__text">
-                <h3 class="courselist-wrapper__text-title">SP 26 (Expected)</h3>
+                <h3 class="courselist-wrapper__text-title">SP 26</h3>
               <p class="courselist-wrapper__text">
                   CS 4710: Artifical Intelligence
                   <br>
@@ -144,7 +144,9 @@
                   CS 3130: Computer Systems and Organization 2
                   <br>
                   CS 4501: Special Topics in Computer Science: Algorithmic Economics
-                  </p>
+                  <br>
+                  STAT 3220: Introduction to Regression Analysis
+                </p>
               </div>
             </div>
            </div>
