fixed grammar issue

--- a/src/pages/NFL_ML.html
+++ b/src/pages/NFL_ML.html
@@ -169,7 +169,7 @@
                 I don't want to make money off of the software, but I want to see how numbers and effective analysis can predict outcomes.
                 <br>
                 <br> 
-                This project focuses on scraping data from NFL statistics, including game and player data, to build a machine learning model for predicting player and team performace.
+                This project focuses on scraping data from NFL statistics, including game and player data, to build a machine learning model for predicting player and team performance.
                 The project involves data collection and parsing through scraping classes, date parsing functions and encapsulation classes to store information into a structured database.
                 The machine learning model is a classifier trained using gini and entropy training mechanisms modeled in a decision tree structure.
                 The project is written in Python, utilizing libraries such as requests for retrieving the JSON object, NumPy and Matplotlib for data analysis, and Pandas and Sklearn for data manipulation and model training.
