updated read me

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I study Computer Science and General Business at the University of Virginia, pursuing my passion for learning how to create software that solves real-world challenges and drives long-term impact.              </p>
+                As a Computer Science major and General Business minor at the University of Virginia, I am pursuing my passion for learning how to create software that solves real-world challenges and drives long-term impact.              </p>
               <p class="about-wrapper__info-text">
                 Outside of class, I study Human-Robot Interaction as a Research Assistant for the UVa Engineering Link Lab - Collaborative Robotics Lab - and I am a Peer Coach for MATH 1310 (Calculus 1).
               </p>
@@ -222,7 +222,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://github.com/louisarawles/portfolio/settings/access"
+                  href="https://github.com/louisarawles/portfolio"
                 >
                   Source Code
                 </a>
