--- a/src/index.html
+++ b/src/index.html
@@ -148,20 +148,11 @@
                 <br>
                 <div>
                   <p class="mb-4">
-                    The NFL records data at each of their games, providing information on individual players and their teams.
-                    I believe that player statistics are the key to unlocking prescriptive measures to improve strategy both on an off the field,                    
-                    as analyzing player statistics in tandem decreases data sylos and contextualizes individual performances within a greater team dynamic. 
-                    <br>
-                    <br>
-                    The project is written primarily in Python, with database invocations written in SQLite and web scraping functions enabled by JSON object parsing.
-                    Important Python frameworks include NumPy and Matplotlib for statistical analysis, requests and dataclasses for data retrieval and encapsulation,
-                    and Pandas and Sklearn for ML classifier training.
-                    <br>
-                    <br>
-                    Note: this project is in the early stages. My current focus is designing and testing the web scrapers and data classes, so that I have the raw data in an
-                    parsed and encapsulated before inserting them into database tables and creating predictions with my ML classifier. Data visualization functions, database loaders and drivers,
-                    a decisicion tree, and the main class file all exist, but they are incomplete and/or have not been refined to fulfill their intended role in the project.
-                  </p>
+                    This project is an end-to-end data and machine learning system built to ingest, structure, and analyze large-scale NFL Next Gen Stats data in order to evaluate and predict player and team performance. The goal of the project is to explore how raw, high-volume sports data can be transformed into structured datasets, analyzed statistically, and used to support predictive modeling.
+                  <br>
+                  <br>
+                  I designed the system to prioritize reliable data ingestion, clean schema design, and extensibility, allowing analytics and machine learning models to be developed incrementally on top of a stable data foundation.
+            
                 </div>
                 <a
                   rel="noreferrer"
@@ -337,19 +328,6 @@
         </div>
 
         <hr />
-
-        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
-        <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
-            >Jacobo Martínez</a
-          >
-        </p>
-        <p class="footer__text">
-          © 2025 - Template implemented and extended by
-          <a rel="noreferrer" href="https://github.com/louisarawles" target="_blank"
-            >Louisa Rawles</a
-          >
       </div>
     </footer>
     <!-- /END Footer Section -->
