--- a/src/pages/coursework.html
+++ b/src/pages/coursework.html
@@ -145,7 +145,7 @@
                   <br>
                   CS 4501: Special Topics in Computer Science: Algorithmic Economics
                   <br>
-                  STAT 3220: Introduction to Regression Analysis
+                  RELG 1000: Questions in the Study of Religion
                 </p>
               </div>
             </div>
@@ -291,19 +291,6 @@
         </div>
 
         <hr />
-
-        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
-        <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
-            >Jacobo Martínez</a
-          >
-        </p>
-        <p class="footer__text">
-          © 2025 - Template implemented and extended by
-          <a rel="noreferrer" href="https://github.com/louisarawles" target="_blank"
-            >Louisa Rawles</a
-          >
       </div>
     </footer>
     <!-- /END Footer Section -->
