Reformatted pages and moved the portfolio around

--- a/src/pages/hiddenbias.html
+++ b/src/pages/hiddenbias.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" class="sr">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="../assets/favicon.png" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="../styles.scss" />
-    <script
-      defer
-      src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
-    ></script>
-  </head>
-  <body>
-    <!-- Hidden Biases Presentation Video Section -->
-    <div class="container">
-        <main>
-            <h2>Discovering Hidden Demographic Biases in NLP Models</h2>
-            <video controls width="600">
-                <source
-                    src="../assets/hiddenBiases/CS2501Presentation.mp4"
-                    type="video/mp4">
-            </video>
-        </main>
-    </div>
-    <!-- END Hidden Biases Presentation Video Section -->
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" type="image/png" href="../assets/favicon.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="../styles.scss" />
+  <script defer src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+</head>
+
+<body>
+  <!-- Hidden Biases Presentation Video Section -->
+  <div class="container">
+    <main>
+      <h2>Discovering Hidden Demographic Biases in NLP Models</h2>
+      <video controls width="600">
+        <source src="../assets/hiddenBiases/CS2501Presentation.mp4" type="video/mp4">
+      </video>
+    </main>
+  </div>
+  <!-- END Hidden Biases Presentation Video Section -->
+</body>
+
 </html>
