--- a/src/pages/NFL_ML.html
+++ b/src/pages/NFL_ML.html
@@ -143,21 +143,21 @@
             <br>
             <b>Processing:</b> Parsing, normalization, encapsulation methods and classes
             <br>
-            
+
             <a href="https://github.com/louisarawles/NFL-ML/tree/main/NFL%20ML/NFLDataClasses" target="_blank"
               class="cta-btn text-color-main">
-                Data Classes
+              Data Classes
             </a>
-            <a href="https://github.com/louisarawles/NFL-ML/tree/main/NFL%20ML/NFLScrapers/GameCenter/encapsulate_game_stats.py" target="_blank"
-              class="cta-btn text-color-main">
-                Game Stat Encapsulator
+            <a href="https://github.com/louisarawles/NFL-ML/tree/main/NFL%20ML/NFLScrapers/GameCenter/encapsulate_game_stats.py"
+              target="_blank" class="cta-btn text-color-main">
+              Game Stat Encapsulator
             </a>
             <br>
             <b>Storage:</b> SQLite relational database
             <br>
             <a href="https://github.com/louisarawles/NFL-ML/tree/main/NFL%20ML/databaseDriver.py" target="_blank"
               class="cta-btn text-color-main">
-                Database Driver
+              Database Driver
             </a>
             <br>
             <b>Analytics Frameworks:</b> NumPy, Pandas, Matplotlib
